Add duplicate include tags and fix file names in mix-manifest.json

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -23,8 +23,8 @@
     "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
-    "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -204,8 +204,8 @@
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
-    "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -385,8 +385,8 @@
     "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
-    "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
