--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -25,6 +25,7 @@
     "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/prod/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/prod/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -206,6 +207,7 @@
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -387,6 +389,7 @@
     "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
+    "/qa/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/qa/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
