Update CSS and HTML files (contraseña, verifica)

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -4,9 +4,11 @@
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
+    "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
     "/prod/PORTAL/index.html": "/prod/PORTAL/index.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
+    "/prod/PORTAL/welcome.html": "/prod/PORTAL/welcome.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
     "/prod/assets/css/portal.css": "/prod/assets/css/portal.css",
@@ -186,9 +188,11 @@
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
+    "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
+    "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
     "/final/assets/css/portal.css": "/final/assets/css/portal.css",
@@ -368,9 +372,11 @@
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
+    "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
     "/qa/PORTAL/index.html": "/qa/PORTAL/index.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
+    "/qa/PORTAL/welcome.html": "/qa/PORTAL/welcome.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
     "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
     "/qa/assets/css/portal.css": "/qa/assets/css/portal.css",
