Add new colors and password toggle functionality

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -4,8 +4,10 @@
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
+    "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
     "/prod/PORTAL/index.html": "/prod/PORTAL/index.html",
+    "/prod/PORTAL/interna.html": "/prod/PORTAL/interna.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
     "/prod/PORTAL/welcome.html": "/prod/PORTAL/welcome.html",
@@ -50,6 +52,7 @@
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
     "/prod/assets/images/PORTAL/banner_home_1.png": "/prod/assets/images/PORTAL/banner_home_1.png",
     "/prod/assets/images/PORTAL/tmp_articulo.jpg": "/prod/assets/images/PORTAL/tmp_articulo.jpg",
+    "/prod/assets/images/PORTAL/tmp_header.png": "/prod/assets/images/PORTAL/tmp_header.png",
     "/prod/assets/images/PORTAL/tmp_servicio.png": "/prod/assets/images/PORTAL/tmp_servicio.png",
     "/prod/assets/images/accionistas.png": "/prod/assets/images/accionistas.png",
     "/prod/assets/images/accionistas1.png": "/prod/assets/images/accionistas1.png",
@@ -188,8 +191,10 @@
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
+    "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
+    "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
@@ -234,6 +239,7 @@
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
     "/final/assets/images/PORTAL/banner_home_1.png": "/final/assets/images/PORTAL/banner_home_1.png",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
+    "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
     "/final/assets/images/accionistas.png": "/final/assets/images/accionistas.png",
     "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
@@ -372,8 +378,10 @@
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
+    "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
     "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
     "/qa/PORTAL/index.html": "/qa/PORTAL/index.html",
+    "/qa/PORTAL/interna.html": "/qa/PORTAL/interna.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
     "/qa/PORTAL/welcome.html": "/qa/PORTAL/welcome.html",
@@ -418,6 +426,7 @@
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
     "/qa/assets/images/PORTAL/banner_home_1.png": "/qa/assets/images/PORTAL/banner_home_1.png",
     "/qa/assets/images/PORTAL/tmp_articulo.jpg": "/qa/assets/images/PORTAL/tmp_articulo.jpg",
+    "/qa/assets/images/PORTAL/tmp_header.png": "/qa/assets/images/PORTAL/tmp_header.png",
     "/qa/assets/images/PORTAL/tmp_servicio.png": "/qa/assets/images/PORTAL/tmp_servicio.png",
     "/qa/assets/images/accionistas.png": "/qa/assets/images/accionistas.png",
     "/qa/assets/images/accionistas1.png": "/qa/assets/images/accionistas1.png",
