Update header logo link and add new page for PQRS initiation

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -10,6 +10,7 @@
     "/prod/PORTAL/interna.html": "/prod/PORTAL/interna.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
+    "/prod/PORTAL/pqrs_iniciar.html": "/prod/PORTAL/pqrs_iniciar.html",
     "/prod/PORTAL/welcome.html": "/prod/PORTAL/welcome.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
@@ -197,6 +198,7 @@
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
+    "/final/PORTAL/pqrs_iniciar.html": "/final/PORTAL/pqrs_iniciar.html",
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
@@ -384,6 +386,7 @@
     "/qa/PORTAL/interna.html": "/qa/PORTAL/interna.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
+    "/qa/PORTAL/pqrs_iniciar.html": "/qa/PORTAL/pqrs_iniciar.html",
     "/qa/PORTAL/welcome.html": "/qa/PORTAL/welcome.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
     "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
