Add new CSS file and update colors

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,6 +3,7 @@
     "/dist/assets/js/portal.js": "/dist/assets/js/portal.js",
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
+    "/dist/assets/css/forms.css": "/dist/assets/css/forms.css",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
@@ -10,10 +11,12 @@
     "/prod/PORTAL/interna.html": "/prod/PORTAL/interna.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
+    "/prod/PORTAL/pqrs_1_crear.html": "/prod/PORTAL/pqrs_1_crear.html",
     "/prod/PORTAL/pqrs_iniciar.html": "/prod/PORTAL/pqrs_iniciar.html",
     "/prod/PORTAL/welcome.html": "/prod/PORTAL/welcome.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
+    "/prod/assets/css/forms.css": "/prod/assets/css/forms.css",
     "/prod/assets/css/portal.css": "/prod/assets/css/portal.css",
     "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
@@ -198,10 +201,12 @@
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
+    "/final/PORTAL/pqrs_1_crear.html": "/final/PORTAL/pqrs_1_crear.html",
     "/final/PORTAL/pqrs_iniciar.html": "/final/PORTAL/pqrs_iniciar.html",
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
+    "/final/assets/css/forms.css": "/final/assets/css/forms.css",
     "/final/assets/css/portal.css": "/final/assets/css/portal.css",
     "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
@@ -386,10 +391,12 @@
     "/qa/PORTAL/interna.html": "/qa/PORTAL/interna.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
+    "/qa/PORTAL/pqrs_1_crear.html": "/qa/PORTAL/pqrs_1_crear.html",
     "/qa/PORTAL/pqrs_iniciar.html": "/qa/PORTAL/pqrs_iniciar.html",
     "/qa/PORTAL/welcome.html": "/qa/PORTAL/welcome.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
     "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
+    "/qa/assets/css/forms.css": "/qa/assets/css/forms.css",
     "/qa/assets/css/portal.css": "/qa/assets/css/portal.css",
     "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
