Update portal header and color scheme

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -55,6 +55,7 @@
     "/prod/assets/images/ILUS2.webp": "/prod/assets/images/ILUS2.webp",
     "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
     "/prod/assets/images/PORTAL/banner_home_1.png": "/prod/assets/images/PORTAL/banner_home_1.png",
+    "/prod/assets/images/PORTAL/banner_portal_home_1.png": "/prod/assets/images/PORTAL/banner_portal_home_1.png",
     "/prod/assets/images/PORTAL/tmp_articulo.jpg": "/prod/assets/images/PORTAL/tmp_articulo.jpg",
     "/prod/assets/images/PORTAL/tmp_header.png": "/prod/assets/images/PORTAL/tmp_header.png",
     "/prod/assets/images/PORTAL/tmp_servicio.png": "/prod/assets/images/PORTAL/tmp_servicio.png",
@@ -245,6 +246,7 @@
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
     "/final/assets/images/PORTAL/banner_home_1.png": "/final/assets/images/PORTAL/banner_home_1.png",
+    "/final/assets/images/PORTAL/banner_portal_home_1.png": "/final/assets/images/PORTAL/banner_portal_home_1.png",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
@@ -435,6 +437,7 @@
     "/qa/assets/images/ILUS2.webp": "/qa/assets/images/ILUS2.webp",
     "/qa/assets/images/ILUS3.webp": "/qa/assets/images/ILUS3.webp",
     "/qa/assets/images/PORTAL/banner_home_1.png": "/qa/assets/images/PORTAL/banner_home_1.png",
+    "/qa/assets/images/PORTAL/banner_portal_home_1.png": "/qa/assets/images/PORTAL/banner_portal_home_1.png",
     "/qa/assets/images/PORTAL/tmp_articulo.jpg": "/qa/assets/images/PORTAL/tmp_articulo.jpg",
     "/qa/assets/images/PORTAL/tmp_header.png": "/qa/assets/images/PORTAL/tmp_header.png",
     "/qa/assets/images/PORTAL/tmp_servicio.png": "/qa/assets/images/PORTAL/tmp_servicio.png",
