Update links in p_link_servicio.html and interna.html*** ***Add links in pqrs_1_crear.html*** ***Update mix-manifest.json with new HTML files

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -12,6 +12,9 @@
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
     "/prod/PORTAL/pqrs_1_crear.html": "/prod/PORTAL/pqrs_1_crear.html",
+    "/prod/PORTAL/pqrs_1_crear1.html": "/prod/PORTAL/pqrs_1_crear1.html",
+    "/prod/PORTAL/pqrs_2_consultar.html": "/prod/PORTAL/pqrs_2_consultar.html",
+    "/prod/PORTAL/pqrs_2_consultar1.html": "/prod/PORTAL/pqrs_2_consultar1.html",
     "/prod/PORTAL/pqrs_iniciar.html": "/prod/PORTAL/pqrs_iniciar.html",
     "/prod/PORTAL/welcome.html": "/prod/PORTAL/welcome.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
@@ -203,6 +206,9 @@
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
     "/final/PORTAL/pqrs_1_crear.html": "/final/PORTAL/pqrs_1_crear.html",
+    "/final/PORTAL/pqrs_1_crear1.html": "/final/PORTAL/pqrs_1_crear1.html",
+    "/final/PORTAL/pqrs_2_consultar.html": "/final/PORTAL/pqrs_2_consultar.html",
+    "/final/PORTAL/pqrs_2_consultar1.html": "/final/PORTAL/pqrs_2_consultar1.html",
     "/final/PORTAL/pqrs_iniciar.html": "/final/PORTAL/pqrs_iniciar.html",
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
@@ -394,6 +400,9 @@
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
     "/qa/PORTAL/pqrs_1_crear.html": "/qa/PORTAL/pqrs_1_crear.html",
+    "/qa/PORTAL/pqrs_1_crear1.html": "/qa/PORTAL/pqrs_1_crear1.html",
+    "/qa/PORTAL/pqrs_2_consultar.html": "/qa/PORTAL/pqrs_2_consultar.html",
+    "/qa/PORTAL/pqrs_2_consultar1.html": "/qa/PORTAL/pqrs_2_consultar1.html",
     "/qa/PORTAL/pqrs_iniciar.html": "/qa/PORTAL/pqrs_iniciar.html",
     "/qa/PORTAL/welcome.html": "/qa/PORTAL/welcome.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
