Update dependencies and fix navigation links

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -4,6 +4,8 @@
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/dist/assets/css/forms.css": "/dist/assets/css/forms.css",
+    "/prod/PORTAL/2_certificados_colilla.html": "/prod/PORTAL/2_certificados_colilla.html",
+    "/prod/PORTAL/2_certificados_pension.html": "/prod/PORTAL/2_certificados_pension.html",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
@@ -198,6 +200,8 @@
     "/prod/solicitudes_caso/index.html": "/prod/solicitudes_caso/index.html",
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
+    "/final/PORTAL/2_certificados_colilla.html": "/final/PORTAL/2_certificados_colilla.html",
+    "/final/PORTAL/2_certificados_pension.html": "/final/PORTAL/2_certificados_pension.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
@@ -392,6 +396,8 @@
     "/final/solicitudes_caso/index.html": "/final/solicitudes_caso/index.html",
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
+    "/qa/PORTAL/2_certificados_colilla.html": "/qa/PORTAL/2_certificados_colilla.html",
+    "/qa/PORTAL/2_certificados_pension.html": "/qa/PORTAL/2_certificados_pension.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
     "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
     "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
