--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "daisyui": "^3.9.3",
+    "daisyui": "^4.7.2",
     "filename-regex": "^2.0.1",
     "laravel-mix": "^6.0.49",
     "laravel-mix-replace-in-file": "^0.1.0",
@@ -36,7 +36,7 @@
     "chart.js": "^4.4.0",
     "dayjs-business-days2": "^1.2.2",
     "del": "^7.1.0",
-    "gsap": "npm:@gsap/simply@^3.12.2",
+    "gsap": "^3.12.5",
     "js-year-calendar": "^2.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
