Update dropdown styles and fix links in PORTAL pages

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -5,6 +5,7 @@
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/dist/assets/css/forms.css": "/dist/assets/css/forms.css",
     "/prod/PORTAL/2_certificados_colilla.html": "/prod/PORTAL/2_certificados_colilla.html",
+    "/prod/PORTAL/2_certificados_ingreso.html": "/prod/PORTAL/2_certificados_ingreso.html",
     "/prod/PORTAL/2_certificados_pension.html": "/prod/PORTAL/2_certificados_pension.html",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
@@ -201,6 +202,7 @@
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
     "/final/PORTAL/2_certificados_colilla.html": "/final/PORTAL/2_certificados_colilla.html",
+    "/final/PORTAL/2_certificados_ingreso.html": "/final/PORTAL/2_certificados_ingreso.html",
     "/final/PORTAL/2_certificados_pension.html": "/final/PORTAL/2_certificados_pension.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
@@ -397,6 +399,7 @@
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
     "/qa/PORTAL/2_certificados_colilla.html": "/qa/PORTAL/2_certificados_colilla.html",
+    "/qa/PORTAL/2_certificados_ingreso.html": "/qa/PORTAL/2_certificados_ingreso.html",
     "/qa/PORTAL/2_certificados_pension.html": "/qa/PORTAL/2_certificados_pension.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
     "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
