Add chat bot image to banners.html

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -108,6 +108,7 @@
     "/prod/assets/images/blog/blog_4.jpg": "/prod/assets/images/blog/blog_4.jpg",
     "/prod/assets/images/blog/blog_4.webp": "/prod/assets/images/blog/blog_4.webp",
     "/prod/assets/images/chart_accionistas.png": "/prod/assets/images/chart_accionistas.png",
+    "/prod/assets/images/chat_bot.webp": "/prod/assets/images/chat_bot.webp",
     "/prod/assets/images/fase.png": "/prod/assets/images/fase.png",
     "/prod/assets/images/fb.png": "/prod/assets/images/fb.png",
     "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
@@ -306,6 +307,7 @@
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
+    "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
@@ -504,6 +506,7 @@
     "/qa/assets/images/blog/blog_4.jpg": "/qa/assets/images/blog/blog_4.jpg",
     "/qa/assets/images/blog/blog_4.webp": "/qa/assets/images/blog/blog_4.webp",
     "/qa/assets/images/chart_accionistas.png": "/qa/assets/images/chart_accionistas.png",
+    "/qa/assets/images/chat_bot.webp": "/qa/assets/images/chat_bot.webp",
     "/qa/assets/images/fase.png": "/qa/assets/images/fase.png",
     "/qa/assets/images/fb.png": "/qa/assets/images/fb.png",
     "/qa/assets/images/header_logo.svg": "/qa/assets/images/header_logo.svg",
