Update forms.css and portal.js, and modify HTML files for creating and consulting requests

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -8,8 +8,10 @@
     "/prod/PORTAL/2_certificados_ingreso.html": "/prod/PORTAL/2_certificados_ingreso.html",
     "/prod/PORTAL/2_certificados_pension.html": "/prod/PORTAL/2_certificados_pension.html",
     "/prod/PORTAL/3_actualizacion_contacto.html": "/prod/PORTAL/3_actualizacion_contacto.html",
+    "/prod/PORTAL/3_actualizacion_documento.html": "/prod/PORTAL/3_actualizacion_documento.html",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
+    "/prod/PORTAL/calendario.html": "/prod/PORTAL/calendario.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
     "/prod/PORTAL/index.html": "/prod/PORTAL/index.html",
     "/prod/PORTAL/interna.html": "/prod/PORTAL/interna.html",
@@ -66,6 +68,7 @@
     "/prod/assets/images/PORTAL/tmp_articulo.jpg": "/prod/assets/images/PORTAL/tmp_articulo.jpg",
     "/prod/assets/images/PORTAL/tmp_header.png": "/prod/assets/images/PORTAL/tmp_header.png",
     "/prod/assets/images/PORTAL/tmp_servicio.png": "/prod/assets/images/PORTAL/tmp_servicio.png",
+    "/prod/assets/images/PORTAL/top_calendario.webp": "/prod/assets/images/PORTAL/top_calendario.webp",
     "/prod/assets/images/accionistas.png": "/prod/assets/images/accionistas.png",
     "/prod/assets/images/accionistas1.png": "/prod/assets/images/accionistas1.png",
     "/prod/assets/images/accionistas2.png": "/prod/assets/images/accionistas2.png",
@@ -207,8 +210,10 @@
     "/final/PORTAL/2_certificados_ingreso.html": "/final/PORTAL/2_certificados_ingreso.html",
     "/final/PORTAL/2_certificados_pension.html": "/final/PORTAL/2_certificados_pension.html",
     "/final/PORTAL/3_actualizacion_contacto.html": "/final/PORTAL/3_actualizacion_contacto.html",
+    "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
+    "/final/PORTAL/calendario.html": "/final/PORTAL/calendario.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
@@ -265,6 +270,7 @@
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
+    "/final/assets/images/PORTAL/top_calendario.webp": "/final/assets/images/PORTAL/top_calendario.webp",
     "/final/assets/images/accionistas.png": "/final/assets/images/accionistas.png",
     "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
     "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
@@ -406,8 +412,10 @@
     "/qa/PORTAL/2_certificados_ingreso.html": "/qa/PORTAL/2_certificados_ingreso.html",
     "/qa/PORTAL/2_certificados_pension.html": "/qa/PORTAL/2_certificados_pension.html",
     "/qa/PORTAL/3_actualizacion_contacto.html": "/qa/PORTAL/3_actualizacion_contacto.html",
+    "/qa/PORTAL/3_actualizacion_documento.html": "/qa/PORTAL/3_actualizacion_documento.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
     "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
+    "/qa/PORTAL/calendario.html": "/qa/PORTAL/calendario.html",
     "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
     "/qa/PORTAL/index.html": "/qa/PORTAL/index.html",
     "/qa/PORTAL/interna.html": "/qa/PORTAL/interna.html",
@@ -464,6 +472,7 @@
     "/qa/assets/images/PORTAL/tmp_articulo.jpg": "/qa/assets/images/PORTAL/tmp_articulo.jpg",
     "/qa/assets/images/PORTAL/tmp_header.png": "/qa/assets/images/PORTAL/tmp_header.png",
     "/qa/assets/images/PORTAL/tmp_servicio.png": "/qa/assets/images/PORTAL/tmp_servicio.png",
+    "/qa/assets/images/PORTAL/top_calendario.webp": "/qa/assets/images/PORTAL/top_calendario.webp",
     "/qa/assets/images/accionistas.png": "/qa/assets/images/accionistas.png",
     "/qa/assets/images/accionistas1.png": "/qa/assets/images/accionistas1.png",
     "/qa/assets/images/accionistas2.png": "/qa/assets/images/accionistas2.png",
