Update header link and add FAQ functionality

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -13,6 +13,7 @@
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
     "/prod/PORTAL/calendario.html": "/prod/PORTAL/calendario.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
+    "/prod/PORTAL/faq.html": "/prod/PORTAL/faq.html",
     "/prod/PORTAL/index.html": "/prod/PORTAL/index.html",
     "/prod/PORTAL/interna.html": "/prod/PORTAL/interna.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
@@ -215,6 +216,7 @@
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/calendario.html": "/final/PORTAL/calendario.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
+    "/final/PORTAL/faq.html": "/final/PORTAL/faq.html",
     "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/interna.html": "/final/PORTAL/interna.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
@@ -417,6 +419,7 @@
     "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
     "/qa/PORTAL/calendario.html": "/qa/PORTAL/calendario.html",
     "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
+    "/qa/PORTAL/faq.html": "/qa/PORTAL/faq.html",
     "/qa/PORTAL/index.html": "/qa/PORTAL/index.html",
     "/qa/PORTAL/interna.html": "/qa/PORTAL/interna.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
